algoritimo teoricamente pronto

--- a/Huffman/algoritimo_huffman/algoritimo_huffman.cbp
+++ b/Huffman/algoritimo_huffman/algoritimo_huffman.cbp
@@ -34,6 +34,7 @@
 		<Unit filename="huffman.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="huffman.h" />
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
